@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-13T08:19:45Z",
+  "timestamp" : "2022-07-13T16:23:35Z",
   "count_outdated" : 385,
   "uniques_outdated" : 222,
-  "count" : 417,
+  "count" : 418,
   "uniques" : 241,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-07-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
