@@ -1,3 +1,10 @@
+2022-07-13T16:23:35Z:
+* notice: last 14d: unq all: 5 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 222 385 / 241 417
+* notice: next accum: outdated-unq outdated-all / unq all: 222 385 / 241 418
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-13]
+
 2022-07-13T08:19:45Z:
 * notice: last 14d: unq all: 5 32
 * notice: prev accum: outdated-unq outdated-all / unq all: 222 385 / 240 417
